--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "per-env": "^1.0.2",
     "pg": "^8.0.3",
     "react-redux": "^7.2.1",
+    "redux-logger": "^3.0.6",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1",
     "uuid": "^8.0.0"
